loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:3: error: ';' expected but '{' found.
} while (!estSurOrange) {
                        ^